--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <div class="text">
+      <p>Wszystkiego Najlepszego! ;D</p>
+    </div>
     <div class="grass_5"></div>
     <div class="grass_6"></div>
     <div class="grass_7"></div>
